--- a/bmi/src/App.css
+++ b/bmi/src/App.css
@@ -27,6 +27,13 @@
 .App-link {
   color: #61dafb;
 }
+.body-wrap {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 @keyframes App-logo-spin {
   from {
