--- a/bmi/src/Components/Input/Input.css
+++ b/bmi/src/Components/Input/Input.css
@@ -11,8 +11,9 @@
 }
 
 .input-wrap .input-box {
-  width: 300px;
+  width: 250px;
   height: 50px;
   padding: 20px 30px;
   font-size: 24pt;
+  margin-bottom: 20px;
 }
