--- a/bmi/src/Components/Input/Input.scss
+++ b/bmi/src/Components/Input/Input.scss
@@ -4,9 +4,10 @@
   display: flex;
   flex-direction: column;
   .input-box {
-    width: 300px;
+    width: 250px;
     height: 50px;
     padding: 20px 30px;
     font-size: 24pt;
+    margin-bottom: 20px;
   }
 }
